fix about-pointer  overlapping title

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -75,10 +75,13 @@ body {
 }
 
 .intro-section {
+  display: flex;
+  flex-direction: column;
   position: relative;
+  justify-content: space-between;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   width: 100%;
-  height: 90vh;
+  height: 95vh;
   background-color: var(--main-bg-color);
   background-image: url("../images/main-image.jpg");
   background-position: center center;
@@ -107,17 +110,13 @@ body {
   & .about-pointer {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    bottom: 130px;
-    left: 50%;
-    transform: translateX(-50%);
     align-items: center;
     justify-content: center;
+    padding: 50px 0px;
     gap: 0px;
     & .about-title {
       font-weight: lighter;
     }
-
     & .float-icon {
       animation:float-icon .8s cubic-bezier(.25,.46,.45,.94) infinite alternate both;
       & polyline {
@@ -225,16 +224,12 @@ body {
     position: absolute;
     right: 0;
     top: 0;
-    // width: 10px;
-    // height: 10px;
     background-color: transparent;
     border: 15px solid;
     border-right-color: rgba(white, .5);
     border-top-color: rgba(white, .5);
     border-bottom-color: transparent;
     border-left-color: transparent;
-
-    // z-index: 0;
   }
   &:hover {
     transform: scale(1.1);
